crates/biome_js_analyze/tests/specs/nursery/noExcessiveClassesPerFile/invalid/max-classes-option.js
/* should generate diagnostics */
class InvalidClass1 { }
class InvalidClass2 { }
class InvalidClass3 { }
